# libomxil-bellagio

./: Makefile.am
doc/: footer_SF.html.in
m4/: ax_set_plugindir.m4
patches/: 0001-Fallback-on-different-registry-location-except-for.patch  0002-Change-plugindir-not-the-best-solution-heck.patch  0003_fix_docdir.patch  0004_fix_FTBFS_for_natty.patch  0005_test_build.patch  0006_fix_FTBFS_for_gcc4.6.patch  0007_remove_online_sourceforge_logo.patch  0008_fix_FTBFS_for_gcc5.patch  0009_fix_BOSA_ST_InitComponentLoader_buffer_overrun.patch  0010_Fix_FTBFS_Hurd_FreeBSD.patch  series
src/: Makefile.am  common.c  common.h  omxregister.c  st_static_component_loader.c
src/base/: omx_base_component.c  omx_base_component.h  omx_base_filter.c  omx_base_sink.c  omx_base_source.c
src/components/videoscheduler/: omx_video_scheduler_component.c
src/core_extensions/: OMXCoreRMExt.c
test/components/audio_effects/: Makefile.am  omxaudiomixertest.c  omxaudiomixertest.h  omxvolcontroltest.c  omxvolcontroltest.h
test/components/resource_manager/: Makefile.am  omxprioritytest.c  omxprioritytest.h  omxrmtest.c
